# neuromorphicVision

./: CMakeLists.txt  README.md  eval_fpv_abmof.sh  eval_fpv_adaptive.sh  eval_fpv_fixed.sh  eval_mvsec_abmof.sh  eval_of.sh  eval_of_20hz.sh  eval_of_20hz_cut.sh  eval_of_dt1.sh  eval_of_dt1_cut.sh  eval_of_dt4.sh  eval_of_dt4_cut.sh  evals.txt  playback_dvxplorer_evs.py  playback_fpv_evs.py  playback_mvsec_evs.py
config/: config.yaml  config_dvxplorer.yaml  config_flir.yaml  config_mvsec.yaml  config_mvsec_20hz.yaml  config_mvsec_adaptive.yaml  config_mvsec_adaptive_step3.yaml  config_mvsec_debug.yaml  config_mvsec_dt1.yaml  config_mvsec_dt4.yaml  config_playback.yaml
include/lis_nv/: defs.cpp  defs.hpp  functions.hpp  visionNode.hpp  visionNodeFrames.hpp
launch/: vision.launch  vision_frame.launch
lis_nv/: CMakeLists.txt  package.xml
lis_nv/include/lis_nv/: controllerNode.hpp  defs.cpp  defs.hpp  functions.hpp  visionNode.hpp  visionNodePlayback.hpp
lis_nv/launch/: mavros_py.launch  vision_playback.launch
lis_nv/msg/: SparseOFVector.msg  SparseOFVectorArray.msg
lis_nv/plots/: plot_altitude.py  plot_timings.py
lis_nv/scripts/: mavros.py
lis_nv/src/: visionNode.cpp  visionNodePlayback.cpp  vision_node_playback.cpp
scripts/: fpv_2_hdf5.py  load_fpv.py  mavros.py  output.csv  playAvi.py  plot_fps_eval_adaptive_vs_fixed.py  plot_fps_eval_fixed.py  plot_mvsec_eval.py  plot_mvsec_eval_abmof_vs_fixed.py  plot_mvsec_eval_adaptive.py  plot_mvsec_eval_adaptive_abmof.py  plot_playback_frames.py  time.py
scripts/format_mvsec/: format_mvsec.py  format_mvsec_npz.py
src/: visionNode.cpp  visionNodeFrames.cpp  vision_node.cpp  vision_node_frames.cpp
src/scripts/: VisionNodeDVXEventsPlayback.py  VisionNodeEventsPlayback.py  VisionNodeMVSECEventsPlayback.py  VisionNodeUZHFPVEventsPlayback.py  defs.py  functions.py
testing/src/: defs.py  functions.py  playback_frames.py  playback_mvsec_evs.py  playback_mvsec_test.py  playback_uzh.py  playback_uzh_test.py
testing/utils/: dataloader.py  eval_utils.py  event_utils.py  inspect_hdf5.py  load_utils copy.py  load_utils.py  load_utils_dvxplorer.py  load_utils_fpv.py  load_utils_mvsec.py  loss.py  visualize.py  viz_utils.py
